<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="test_servo">Test Servo</string>
    <string name="btn_search_usb_device">Search USB Device</string>
    
    <!-- Twitter UI -->
    <string name="action_settings">Settings</string>
    <string name="hello">Hello, </string>
    <string name="login_instructions">Login to twiter</string>
    <string name="share_instructions">Enter share message</string>
    <string name="btn_login">Login to Twitter</string>
    <string name="btn_share">Share</string>
    <string name="btn_timeline">Get Timeline</string>

    <!-- Twitter Configurations -->
    <string name="twitter_callback">http://example.com</string>
    <string name="twitter_consumer_key">PDwoVmD4Q18itjSItXDcwrzJm</string>
    <string name="twitter_consumer_secret">3PUuugOUbjowDewi160MwbipXQaCuA1XKODNBRavo8YI8idezD</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    
    <string name="app_title">USB Serial Example</string>
    <string name="app_name">Pet Feeder</string>
    <string name="refreshing">Refreshing...</string>
    
    <string name="searching">Searching...</string>
    
    <!-- Feeder Fragment -->
    <string name="arduino">Arduino</string>
    <string name="twitter">Twitter</string>
    <string name="start_service_btn">Start Service</string>
    <string name="stop_service_btn">Stop Service</string>
    <string name="manual_feed_btn">Manual Feed</string>
    <string name="activate_motion_service_btn">Activate Motion Service</string>
    <string name="start_listen_btn">Start Listen</string>
    <string name="stop_listen_btn">Stop Listen</string>
    <string name="arduino_status_offline">Device Offline</string>
	<string name="twitter_status_logout">Account Not Loggedin</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    
    <string-array name="drawer_item_array">
        <item>Feeder</item>
        <item>Arduino</item>
        <item>Twitter</item>
        <item>Camera</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

</resources>